--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,5 +44,6 @@ services:
       POSTGRES_PASSWORD: bright_pass
     volumes:
       - pg_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - web_network
