--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-#version: '3.8'
+# version: '3.8'
 
 networks:
   web_network:
@@ -12,10 +12,14 @@ services:
     build: .
     container_name: bright_app
     image: bright_django:latest
-    command: python manage.py runserver 0.0.0.0:8000 --insecure
+    command: python3 manage.py runserver  0.0.0.0:8000 --insecure
     restart: always
+    deploy:
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8000" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -30,14 +34,9 @@ services:
       - pgsql
     networks:
       - web_network
-    user: "1000:1000"
-    environment:
-      - DJANGO_SETTINGS_MODULE=bright_project.settings
-      - PYTHONUNBUFFERED=1
 
   pgsql:
     image: postgres:15
-    container_name: bright_db
     restart: always
     environment:
       POSTGRES_DB: bright_db
