--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,14 +35,24 @@ services:
     networks:
       - web_network
 
+
   pgsql:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_DB: bright_db
-      POSTGRES_USER: bright_user
       POSTGRES_PASSWORD: bright_pass
     volumes:
       - pg_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - web_network
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8080:8080"
+    networks:
+      - web_network
+
